--- a/BookADemo.html
+++ b/BookADemo.html
@@ -8,12 +8,12 @@
 
     <!-- Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="Request a free demo of CuraTrax healthcare compliance software. See how our platform streamlines incident reporting, policy management, and credentialing for hospitals and clinics.">
+    <meta name="keywords" content="book a demo, healthcare compliance software, incident reporting, policy management, credentialing, hospital compliance, CuraTrax, request demo" />
+    <meta name="author" content="CuraTrax by Stellite Works LLC">
 
     <!-- Titles -->
-    <title>CuraTrax</title>
+    <title>Book a Demo | CuraTrax Healthcare Compliance Software Solutions</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/images/favicon-16x16.png">
