--- a/PolicyPrivacy.html
+++ b/PolicyPrivacy.html
@@ -8,12 +8,12 @@
 
     <!-- Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="CuraTrax Privacy Policy: Learn how we collect, use, and protect your personal information on our healthcare compliance platform. Owned by Stellite Works, LLC.">
+    <meta name="keywords" content="CuraTrax, privacy policy, healthcare compliance, data protection, Stellite Works, personal information, GDPR, HIPAA, privacy notice" />
+    <meta name="author" content="Stellite Works, LLC">
 
     <!-- Titles -->
-    <title>CuraTrax</title>
+    <title>CuraTrax Privacy Policy | Healthcare Compliance & Data Protection</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/images/favicon-16x16.png">
