--- a/TermsOfUse.html
+++ b/TermsOfUse.html
@@ -8,12 +8,12 @@
 
     <!-- Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="CuraTrax Terms of Use: Read the official terms and conditions for using CuraTrax, a healthcare compliance platform by Stellite Works, LLC.">
+    <meta name="keywords" content="CuraTrax, terms of use, terms and conditions, healthcare compliance, policy management, credentialing, incident reporting, Stellite Works, legal terms" />
+    <meta name="author" content="Stellite Works, LLC">
 
     <!-- Titles -->
-    <title>CuraTrax</title>
+    <title>CuraTrax Terms of Use | Healthcare Compliance Platform</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/images/favicon-16x16.png">
