--- a/blog.html
+++ b/blog.html
@@ -10,13 +10,13 @@
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="Stay updated with the latest healthcare compliance news, regulatory changes, and best practices. Discover expert insights on incident reporting, policy management, and credentialing from CuraTrax.">
+    <meta name="keywords" content="healthcare compliance blog, compliance news, incident reporting, policy management, credentialing, healthcare software, regulatory updates, CuraTrax" />
+    <meta name="author" content="CuraTrax by Stellite Works LLC">
 
     <!-- Titles
     ================================================== -->
-    <title>CuraTrax</title>
+    <title>CuraTrax Healthcare Compliance Blog | News, Updates & Insights</title>
 
     <!-- Favicons
     ================================================== -->
