--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="Get in touch with CuraTrax for expert healthcare compliance software solutions. Request a demo, ask about HIPAA compliance, incident reporting, policy management, or credentialing. Our team is ready to help your organization streamline compliance and improve operations.">
+    <meta name="keywords" content="healthcare compliance software, HIPAA compliance, healthcare incident reporting, policy management software, credentialing system, healthcare risk management, compliance solutions, contact CuraTrax, compliance management, healthcare software support, regulatory compliance, audit-ready software, hospital compliance, clinic compliance, healthcare operations software" />
+    <meta name="author" content="CuraTrax By Stellite Works LLC">
 
     <!-- Titles
     ================================================== -->
-    <title>CuraTrax</title>
+    <title>Contact Us | Healthcare Compliance Software Solutions | CuraTrax</title>
 
     <!-- Favicons
     ================================================== -->
@@ -452,7 +452,7 @@
                     </div>
                     <div class="col-md-5" style="padding-right: 40px;">
                         <div class="page-header-thumb">
-                            <img src="assets/images/others/ChatGPT Image Jun 10, 2025, 12_05_50 PM.png" alt="img">
+                            <img src="assets/images/others/ChatGPT Image Jun 10, 2025, 12_05_50 PM.png" alt="curatrax homepageheader img">
                         </div>
                         <!--~~./ page-header-thumb ~~-->
                     </div>
@@ -471,14 +471,14 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-5">
                         <div class="mock-up-thumb">
-                            <img src="assets/images/others/contact_internal-1.png" alt="Contact Mock" />
+                            <img src="assets/images/others/contact_internal-1.png" alt="Contact CuraTrax Support Illustration" />
                         </div><!-- /.mock-up-block -->
                     </div><!-- /.col-lg-5 -->
 
                     <div class="col-lg-6">
                         <div class="section-title">
                             <h4 class="title-sub" data-animate="hg-fadeInUp">contact us<img
-                                    src="assets/images/icon/divider.png" alt="icon"></h4><!--  /.title-sub -->
+                                    src="assets/images/icon/divider.png" alt="Section  icon"></h4><!--  /.title-sub -->
                             <h2 class="title-main" data-animate="hg-fadeInUp">How Can We Help You Today?</h2><!-- /.title-main -->
                         </div><!-- /.section-title -->
 
@@ -519,7 +519,7 @@
                             <h2 class="title-main">Reach out anytime,<br/> we're here to help.</h2>
                             <!-- /.title-main -->
                             <div class="divider">
-                                <img src="assets/images/icon/divider.png" alt="icon">
+                                <img src="assets/images/icon/divider.png" alt="Section divider icon">
                             </div>
                         </div><!-- /.section-title -->
                     </div><!-- /.col-lg-6 -->
@@ -696,7 +696,7 @@
               <div class="col text-center">
                 <div class="footer-logo" style="display: flex;justify-content: center;">
                   <div style="display: flex;">
-                  <a href="index.html"><img src="assets/images/logo/CT_Logo_Enhanced 1 1.png" alt="Logo" style="height: 67px; width: 67px;"/></a>
+                  <a href="index.html"><img src="assets/images/logo/CT_Logo_Enhanced 1 1.png" alt="CuraTrax Healthcare Compliance Software Logo" style="height: 67px; width: 67px;"/></a>
                   <p style="font-weight: bold;font-size: 38px;padding-top: 1px;">CuraTrax</p>
                 </div>
                 </div>
