--- a/credentialing-portfolio.html
+++ b/credentialing-portfolio.html
@@ -10,13 +10,13 @@
   <!-- Specific Meta
     ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-  <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-  <meta name="author" content="creative-wp">
+  <meta name="description" content="CuraTrax Credentialing System: Streamline healthcare credential management with our secure, cloud-based platform for compliance and transparency.">
+  <meta name="keywords" content="credentialing software, healthcare compliance, cloud-based credentialing, healthcare credential management, audit-ready compliance" />
+  <meta name="author" content="CuraTrax By Stellite Works LLC">
 
   <!-- Titles
     ================================================== -->
-  <title>CuraTrax</title>
+  <title>Credentialing Software for Healthcare Compliance | CuraTrax</title>
 
   <!-- Favicons
     ================================================== -->
