--- a/incident-reporting-portfolio.html
+++ b/incident-reporting-portfolio.html
@@ -10,13 +10,13 @@
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="CuraTrax Incident Reporting Software: Streamline healthcare incident management with our cloud-based platform for compliance and risk reduction.">
+    <meta name="keywords" content="incident reporting software, healthcare compliance, cloud-based incident management, healthcare risk management, compliance reporting" />
+    <meta name="author" content="CuraTrax By Stellite Works LLC">
 
     <!-- Titles
     ================================================== -->
-    <title>CuraTrax</title>
+    <title>Healthcare Incident Reporting Software | HIPAA-Compliant Tool – Curatrax</title>
 
     <!-- Favicons
     ================================================== -->
