--- a/policy-manager-portfolio.html
+++ b/policy-manager-portfolio.html
@@ -10,13 +10,13 @@
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="CuraTrax Policy Manager: Centralized, secure, and scalable policy management for healthcare organizations. Streamline policy creation, tracking, and compliance with automated workflows and audit trails.">
+    <meta name="keywords" content="policy management, healthcare compliance, policy tracking, policy repository, automated workflows, audit trails, CuraTrax, Stellite Works" />
+    <meta name="author" content="Stellite Works, LLC">
 
     <!-- Titles
     ================================================== -->
-    <title>CuraTrax</title>
+    <title>CuraTrax Policy Manager – Secure Policy Oversight for Healthcare</title>
 
     <!-- Favicons
     ================================================== -->
