--- a/team.html
+++ b/team.html
@@ -10,13 +10,13 @@
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="Meet the CuraTrax team: healthcare compliance experts and technology innovators dedicated to delivering secure, scalable solutions for modern enterprises.">
+    <meta name="keywords" content="CuraTrax, team, healthcare compliance, technology, policy management, credentialing, incident reporting, Stellite Works, leadership, experts" />
+    <meta name="author" content="Stellite Works, LLC">
 
     <!-- Titles
     ================================================== -->
-    <title>CuraTrax</title>
+    <title>CuraTrax Team – Healthcare Compliance & Technology Experts</title>
 
     <!-- Favicons
     ================================================== -->
