--- a/faq.html
+++ b/faq.html
@@ -10,13 +10,13 @@
     <!-- Specific Meta
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template.">
-    <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-    <meta name="author" content="creative-wp">
+    <meta name="description" content="Find answers to FAQs about CuraTrax’s healthcare compliance software, including incident tracking, credentialing, and policy management solutions.">
+    <meta name="keywords" content="healthcare compliance software FAQs, credentialing software FAQs, incident tracking software, cloud-based compliance, healthcare compliance solutions" />
+    <meta name="author" content="CuraTrax By Stellite Works LLC">
 
     <!-- Titles
     ================================================== -->
-    <title>Wekala - Multipurpose Agency HTML Template</title>
+    <title>Healthcare Compliance Software FAQs | CuraTrax</title>
 
     <!-- Favicons
     ================================================== -->
