--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <!-- Specific Meta
     ================================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="Personal Portfolio is a modern presentation HTML5 Portfolio HTML Template." />
-  <meta name="keywords" content="HTML5, Template, Design, portfolio, Personal Portfolio, Single portfolio" />
-  <meta name="author" content="creative-wp" />
+  <meta name="description" content="CuraTrax is a comprehensive healthcare compliance software platform offering incident reporting, policy management, and credentialing solutions for hospitals and clinics. Streamline regulatory compliance, improve operational efficiency, and ensure audit readiness with CuraTrax." />
+  <meta name="keywords" content="healthcare compliance software, incident reporting, policy management, credentialing system, HIPAA compliance, regulatory compliance, hospital compliance software, healthcare software, CuraTrax" />
+  <meta name="author" content="CuraTrax by Stellite Works LLC" />
 
   <!-- Titles
     ================================================== -->
-  <title>CuraTrax</title>
+  <title>Healthcare Compliance Software | Incident Reporting, Policy Management & Credentialing | CuraTrax</title>
 
   <!-- Favicons
     ================================================== -->
@@ -342,7 +342,7 @@
                 <!-- Site Branding -->
                 <div class="site-branding">
                   <a href="index.html">
-                    <div id="responsive-logo-bg" alt="Site Logo"></div>
+                    <div id="responsive-logo-bg" alt="CuraTrax Healthcare Compliance Software Logo"></div>
                   </a>
                 </div>
                 <!-- /.site-branding -->
@@ -1401,7 +1401,7 @@
             <div class="col text-center">
               <div class="footer-logo" style="display: flex;justify-content: center;">
                 <div style="display: flex;">
-                  <a href="index.html"><img src="assets/images/logo/CT_Logo_Enhanced 1 1.png" alt="Logo" style="height: 67px; width: 67px;"/></a>
+                  <a href="index.html"><img src="assets/images/logo/CT_Logo_Enhanced 1 1.png" alt="CuraTrax Healthcare Compliance Software Logo" style="height: 67px; width: 67px;"/></a>
                   <p style="font-weight: bold;font-size: 38px;padding-top: 1px;">CuraTrax</p>
                 </div>
               </div>
